--- a/checkin4you/Client/Properties/launchSettings.json
+++ b/checkin4you/Client/Properties/launchSettings.json
@@ -24,7 +24,8 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadProfile": "aspnetcore"
     }
   }
 }
