--- a/checkin4you/Server/appsettings.json
+++ b/checkin4you/Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Server=.\\SQLEXPRESS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
+  }
 }
