--- a/checkin4you/.editorconfig
+++ b/checkin4you/.editorconfig
@@ -28,6 +28,12 @@ dotnet_diagnostic.CS8603.severity = none
 # CS8629: Nullable value type may be null.
 dotnet_diagnostic.CS8629.severity = none
 
+# CS8601: Possible null reference assignment.
+dotnet_diagnostic.CS8601.severity = none
+
+# CS8625: Cannot convert null literal to non-nullable reference type.
+dotnet_diagnostic.CS8625.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
