--- a/checkin4you/.editorconfig
+++ b/checkin4you/.editorconfig
@@ -34,6 +34,9 @@ dotnet_diagnostic.CS8601.severity = none
 # CS8625: Cannot convert null literal to non-nullable reference type.
 dotnet_diagnostic.CS8625.severity = none
 
+# CS8600: Converting null literal or possible null value to non-nullable type.
+dotnet_diagnostic.CS8600.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
