--- a/checkin4you/Client/checkin4you.Client.csproj
+++ b/checkin4you/Client/checkin4you.Client.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PSC.Blazor.Components.Icons" Version="6.0.5" />
     <PackageReference Include="Radzen.Blazor" Version="3.18.10" />
   </ItemGroup>
