--- a/checkin4you/Server/appsettings.json
+++ b/checkin4you/Server/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Server=.\\SQLEXPRESS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
+  },
+  "MailSettings": {
+    "Mail": "andreashlava@yahoo.com",
+    "DisplayName": "hlavaandreas21",
+    "Password": "vsgsneltiwpsucub",
+    "Host": "smtp.mail.yahoo.com",
+    "Port": 465
   }
 }
