Add config for default URI and adjust LanguageState

--- a/checkin4you/Server/appsettings.json
+++ b/checkin4you/Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Server=.\\SQLEXPRESS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
+    "Database": "Password=cmsuhwq0;User ID=sa;Server=TERM001\\XSS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
   },
   "MailSettings": {
     "Mail": "andreashlava@yahoo.com",
