Add CORS and adjust ConnectionString

--- a/checkin4you/Server/appsettings.json
+++ b/checkin4you/Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Password=cmsuhwq0;User ID=sa;Server=TERM001\\XSS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
+    "Database": "Data Source=TERM001\\XSS;Initial Catalog=AidaX_kleiner_Italiener;Persist Security Info=True;User ID=sa;Password=cmsuhwq0"
   },
   "MailSettings": {
     "Mail": "andreashlava@yahoo.com",
