Adjust development appsettings and opening hours restaurant as well as make room information bigger if checkin to single room

--- a/checkin4you/Server/appsettings.Development.json
+++ b/checkin4you/Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=.\\SQLEXPRESS;Database=AidaX_kleiner_Italiener;Trusted_Connection=True;"
   }
 }
